--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+##Aplication port
+server.port=8080
 
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+##Postgres SQL
+spring.datasource.url=jdbc:postgresql:localhost:1234/dev
+spring.datsource.username=postgres
+spring.datasource.password=postgres
+
+##Default schema
+spring.flyway.schemas=users
+spring.jpa.properties.hibernate.default_schema=users
