--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
-##Aplication port
-server.port=8080
+server.port=8081
 
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.url=jdbc:postgresql://localhost:5432/user-api
+spring.datasource.username=postgres
+spring.datasource.password=mike123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.generate-ddl=true
 
-##Postgres SQL
-spring.datasource.url=jdbc:postgresql:localhost:1234/dev
-spring.datsource.username=postgres
-spring.datasource.password=postgres
-
-##Default schema
-spring.flyway.schemas=users
-spring.jpa.properties.hibernate.default_schema=users
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
